# materialDB

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
src/: main.cpp  materials.db  materialsDict.db  propdb.scm
src/database/include/: database_manager.h
src/database/src/: database_manager.cpp
src/models/include/: material.h
src/models/src/: material.cpp
src/scm_parser/include/: scm_parser.h
src/scm_parser/src/: scm_parser.cpp
vcpkg/overlay-ports/tinyScheme/: portfile.cmake  usage  vcpkg.json
